--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="https://it-it.facebook.com/pg/ArtofHairIT/about/?ref=page_internal">
                 <img src="img/facebook-logo.png" alt="Facebook">
             </a>
-            <img src="img/instagram-logo.jpeg" alt="Instagram">
+            <img src="img/instagram-logo.png" alt="Instagram">
 
             <a href="" class="main-container__links__btn btn">Chiama ora</a>
             <a href="" class="main-container__links__btn btn">Vedi orari</a>
