--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </a>
             <img src="img/instagram-logo.png" alt="Instagram">
 
-            <a href="" class="main-container__links__btn btn">Chiama ora</a>
+            <a href="tel:3661504243" class="main-container__links__btn btn">Chiama ora</a>
             <a href="" class="main-container__links__btn btn">Vedi orari</a>
 
         </div>
