--- a/index.html
+++ b/index.html
@@ -23,13 +23,42 @@
             <img src="img/instagram-logo.png" alt="Instagram">
 
             <a href="tel:3661504243" class="main-container__links__btn btn">Chiama ora</a>
-            <a href="" class="main-container__links__btn btn">Vedi orari</a>
+            <a href="#hours" class="main-container__links__btn btn">Vedi orari</a>
 
         </div>
 
         <p class="main-container__subtitle">By Gabry</p>
         <p class="main-container__address"> <a href="https://www.google.it/maps/place/Via+Brescia,+177A,+25075+Nave+BS/@45.5836997,10.2710192,17z/data=!3m1!4b1!4m5!3m4!1s0x47819d5aa6ecb761:0x1db24f2d9ea707e8!8m2!3d45.5836997!4d10.2732079">
              Via Brescia, 177\A (Nave) Brescia </a> </p>
+
+    </div>
+
+    <div class="container-hours" id="hours">
+        <div class="container-hours--table">
+            <p>ORARI DI APERTURA</p>
+            <table class="table">
+                <tr>
+                    <th scope="raw">Martedì</th>
+                    <td>9:00 - 18:00</td>
+                </tr>
+                <tr>
+                    <th scope="raw">Mercoledì</th>
+                    <td>9:00 - 18:00</td>
+                </tr>
+                <tr>
+                    <th scope="raw">Giovedì</th>
+                    <td>13:00 - 22:00</td>
+                </tr>
+                <tr>
+                    <th scope="raw">Venerdì</th>
+                    <td>9:00 - 18:00</td>
+                </tr>
+                    <th scope="raw">Sabato</th>
+                    <td>9:00 - 18:00</td>
+                </tr>
+            </table>
+            <a href="#" class="close-table">X</a>
+        </div>
     </div>
 
 </body>
