--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <a href="https://it-it.facebook.com/pg/ArtofHairIT/about/?ref=page_internal">
                 <img src="img/facebook-logo.png" alt="Facebook">
             </a>
-            <img src="img/instagram-logo.png" alt="Instagram">
+            <a href="">
+                <img src="img/instagram-logo.png" alt="Instagram">
+            </a>
 
             <a href="tel:3661504243" class="main-container__links__btn btn">Chiama ora</a>
             <a href="#hours" class="main-container__links__btn btn">Vedi orari</a>
