--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
         </div>
     </div>
 
+    <script src="js/backgroundChanger.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
 </body>
 </html>
