--- a/index.html
+++ b/index.html
@@ -14,24 +14,29 @@
     </header>
 
     <div class="main-container">
-        <p class="main-container__title">Art Of Hair</p>
 
-        <div class="main-container__links">
-            <a href="https://it-it.facebook.com/pg/ArtofHairIT/about/?ref=page_internal">
-                <img src="img/facebook-logo.png" alt="Facebook">
-            </a>
-            <a href="">
-                <img src="img/instagram-logo.png" alt="Instagram">
-            </a>
+        <div class="main-container--filter">
 
-            <a href="tel:3661504243" class="main-container__links__btn btn">Chiama ora</a>
-            <a href="#hours" class="main-container__links__btn btn">Vedi orari</a>
+            <p class="main-container__title">Art Of Hair</p>
+
+            <div class="main-container__links">
+                <a href="https://it-it.facebook.com/pg/ArtofHairIT/about/?ref=page_internal">
+                    <img src="img/facebook-logo.png" alt="Facebook">
+                </a>
+                <a href="">
+                    <img src="img/instagram-logo.png" alt="Instagram">
+                </a>
+
+                <a href="tel:3661504243" class="main-container__links__btn btn">Chiama ora</a>
+                <a href="#hours" class="main-container__links__btn btn">Vedi orari</a>
+
+            </div>
+
+            <p class="main-container__subtitle">By Gabry</p>
+            <p class="main-container__address"> <a href="https://www.google.it/maps/place/Via+Brescia,+177A,+25075+Nave+BS/@45.5836997,10.2710192,17z/data=!3m1!4b1!4m5!3m4!1s0x47819d5aa6ecb761:0x1db24f2d9ea707e8!8m2!3d45.5836997!4d10.2732079">
+                Via Brescia, 177\A (Nave) Brescia </a> </p>
 
         </div>
-
-        <p class="main-container__subtitle">By Gabry</p>
-        <p class="main-container__address"> <a href="https://www.google.it/maps/place/Via+Brescia,+177A,+25075+Nave+BS/@45.5836997,10.2710192,17z/data=!3m1!4b1!4m5!3m4!1s0x47819d5aa6ecb761:0x1db24f2d9ea707e8!8m2!3d45.5836997!4d10.2732079">
-             Via Brescia, 177\A (Nave) Brescia </a> </p>
 
     </div>
 
@@ -63,8 +68,9 @@
         </div>
     </div>
 
+    <!--
     <script src="js/backgroundChanger.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 
 </body>
 </html>
